@@ -21,6 +21,8 @@ Not yet released.
 - #331, #415: documents the importance of URL encoding when using the ``like``
   operator to filter results.
 - #449: roll back the session on any SQLAlchemy error, not just a few.
+- #436, #453: use ``__table__.name`` instead of ``__tablename__`` to infer the
+  collection name for the SQLAlchemy model.
 - #474: include license files in built wheel for distribution.
 
 Older versions
